# TURTLE_FRANKLIN

./: .gitignore  README.md  ahojda.txt  hsv.py  main.py  path_genesis.py  requirements.txt  robot.py  smer_cesty_A
conf/: detection.yaml  move.yaml  objects.yaml
report/: TODO.txt  regulator_graph.txt
report/figures/: map.raw  regulator_out.eps
src/: A_star_path.py  CMakeLists.txt  FAQ.md  __init__.py  connect.txt  detector.py  excel_data.txt  install.sh  jan_test.py  map.py  move.py  objects.py  package.xml  path_genesis.py  picture.py  regulated_move.py  robot.py  rotation_data  sequences.py  setup.py  turtlebot.py  visualizer.py
src/launch/: bringup.launch  bringup_astra.launch  bringup_realsense_D435.launch  bringup_realsense_R200.launch  camera.launch
src/presentation/: Makefile  turtlebot.tex
src/robolab_turtlebot/: turtlebot.py
src/scripts/: a_star2.py  classes.py  connect.txt  detection.py  detector.py  fit32.npy  garage_coordinates.npy  imsave.py  jan_test.py  main.py  map.py  move.py  objects.py  picture.py  robot.py  single_mv.py  turtlebot.py  visualizer.py  vlevo_kratka1.npy  vpravo_kratka_here3.npy
src/scripts/conf/: TODO.txt  a_star2.py  detection.yaml  objects.yaml
src/scripts/trash/: random_walk.py  show_depth.py  test_sensors.py
src/trash/: A_star_path.py  README.md  ahojda.txt  blsr.npy  dlouha.npy  kratka.npy  move.py  picture.py  play_sound.py  slbr.npy  tuple_converter.py  vlevo_kratka.npy  vpravo_kratka.npy  vpravo_kratka1.npy  wrong_fit.npy  wrong_fit1.npy
